# rust-trade

./: docker-compose.yml
client/: Dockerfile
server/: Cargo.toml
server/migrations/: 20221107002627_trading.down.sql  20221107002627_trading.up.sql
server/migrations/2022-11-01-103842_rust_mysql_init/: down.sql  up.sql
server/src/: db.rs  main.rs  models.rs  schema.rs  test.rs
server/src/database/: mod.rs  models.rs  schema.rs
server/src/http/: binance.rs  mod.rs
