[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.0.0", features=["mysql", "chrono"]}
dotenvy = "0.15"
chrono = "0.4"
hyper = {version = "0.14", features = ["full"]}
tokio = {version = "1", features = ["full"]}
