[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
sqlx = { version = "0.6", features = [ "mysql", "runtime-tokio-rustls" ] }
dotenvy = "0.15"
hyper = {version = "0.14", features = ["full"]}
chrono = "0.4"